--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,10 +1,18 @@
-/* .Home{
-    background-image: url('https://images.squarespace-cdn.com/content/v1/5be93edecc8fedbce94c180a/1554570304859-K55V67QY7IOVFWRF5VEF/Rethink+Retail+Home+Banner.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    
-} */
 
-/* .Home{
-    background: linear-gradient(to right,rgb(81, 177, 222),rgb(123, 67, 123));
-} */
+.mainBtn{
+    margin-top: 15px;
+  border: 1px solid rgb(89, 70, 234);
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+.link{
+    text-decoration: none;
+    color: rgb(85, 71, 237);
+    font-weight: bold;
+}
+.mainBtn:hover{
+    background-color:rgb(82, 131, 236);
+}
+.mainBtn:hover .link{
+    color: white;
+}
