--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -25,16 +25,22 @@ html,body,#root,.App{
 colgroup .col-1{
     width: 80px;
 }
-colgroup .col-2{
+colgroup .col-1{
+    width: 80px;
+}
+colgroup .col-4{
     width: auto;
 }
 colgroup .col-3{
-    width: 120px;
+    width: 80px;
 }
 colgroup .col-4{
     width: 80px;
 }
 colgroup .col-5{
+    width: 70px;
+}
+colgroup .col-6{
     width: 70px;
 }
 .product-img{
